welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:37: error: D is already defined as value D
    val D =litMessage().toInt
        ^Array2:24: error: value % is not a member of java.awt.Color
        setCouleurBrosse(T(i+D)%H)
                               ^Array2:29: error: value % is not a member of java.awt.Color
      setCouleurBrosse(T(H-1+D)%H)
                               ^Array2:41: error: value % is not a member of java.awt.Color
        setCouleurBrosse(T(i+D)%H)
                               ^Array2:46: error: value % is not a member of java.awt.Color
      setCouleurBrosse(T(H-1+D)%H)
                               ^